[Windows] Initial Cookie Accept Policy not set on Deserialized Storage Session. https://bugs.webkit.org/show_bug.cgi?id=61255

Reviewed by Darin Adler.

* WebProcess/win/WebProcessWin.cpp:
(WebKit::WebProcess::platformInitializeWebProcess):
Move the code to set the cookie policy before the early return that is taken when using the
default storage session from the UI Process.
Also, remove unnecessary #ifdefs (USE(CFURLSTORAGESESSIONS) is true if USE(CFNETWORK) is
true) and add a comment explaining the early return.



Canonical link: https://commits.webkit.org/76664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87077 268f45cc-cd09-0410-ab3c-d52691b4dbfc